--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3"
   },
   "scripts": {
     "start": "babel-node index.js",
     "nodemon": "nodemon --exec yarn start",
-    "lint": "eslint index.js src"
+    "lint": "eslint index.js src",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1"
+  },
+  "jest": {
+    "silent": true,
+    "verbose": true,
+    "testEnvironment": "node"
   }
 }
