--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "babel-node ./src/services/index.js",
     "nodemon": "nodemon --exec yarn start",
     "lint": "eslint index.js src",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "crypto-js": "^4.2.0",
-    "date-fns": "^3.3.1"
+    "date-fns": "^3.3.1",
+    "express": "^4.18.2"
   },
   "jest": {
     "silent": true,
