--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "body-parser": "^1.20.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.16.0"
   },
   "jest": {
     "silent": true,
